--- a/public/section-17/index.html
+++ b/public/section-17/index.html
@@ -7,6 +7,7 @@
   <title>Section-17</title>
 </head>
 <body>
+  <!-- Aqui é um comentário -->
   <h1>Aprendendo HTML</h1>
   <p>Este é o meu primeiro parágrafo</p>
   <h2>Título 2</h2>
