--- a/public/section-17/index.html
+++ b/public/section-17/index.html
@@ -11,5 +11,6 @@
   <h1>Aprendendo HTML</h1>
   <p>Este é o meu primeiro parágrafo</p>
   <p>Este <a href="https://www.google.com" target="_blank">link</a> vai para o Google</p>
+  <img src="logo.jpg" alt="Logo do HTML e CSS">
 </body>
 </html>
