--- a/public/section-18/index.html
+++ b/public/section-18/index.html
@@ -13,5 +13,8 @@
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident veritatis temporibus aperiam! Vitae deserunt, deleniti fugit eius voluptatum iure quaerat sunt omnis quia perferendis ea totam ullam beatae enim rerum?
   </p>
+
+  <h2>Esse é o segundo título</h2>
+  
 </body>
 </html>
