--- a/public/section-18/index.html
+++ b/public/section-18/index.html
@@ -15,6 +15,11 @@
   </p>
 
   <h2>Esse é o segundo título</h2>
-  
+
+  <h3 id="titulo_app">Este é o ID</h3>
+
+  <p class="p_texto">Algum texto 1</p>
+  <p class="p_texto">Algum texto 2</p>
+  <p class="p_texto">Algum texto 3</p>
 </body>
 </html>
