--- a/public/section-18/index.html
+++ b/public/section-18/index.html
@@ -21,5 +21,11 @@
   <p class="p_texto">Algum texto 1</p>
   <p class="p_texto">Algum texto 2</p>
   <p class="p_texto">Algum texto 3</p>
+
+  <div>
+    <p class="nome">Nome da cor</p>
+    <p class="hexa">Hexadecimal</p>
+    <p class="rgba">RGBA</p>
+  </div>
 </body>
 </html>
