Criando classe btn

--- a/public/section-18/background.html
+++ b/public/section-18/background.html
@@ -11,5 +11,9 @@
   <div class="div-background">
     <h1>Este é o reino dos backgrounds</h1>
   </div>
+
+  <div class="btn">
+    <a href="fontes.html">Arquivos de fontes</a>
+  </div>
 </body>
 </html>
