--- a/public/section-18/positions.html
+++ b/public/section-18/positions.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <div class="div-position static"></div>
-  <div class="div-position relative"></div>
+  <div class="div-position relative">
+    <div class="absolute mini-div"></div>
+  </div>
+  <div class="div-position absolute"></div>
 </body>
 </html>
