--- a/public/section-18/positions.html
+++ b/public/section-18/positions.html
@@ -13,5 +13,9 @@
     <div class="absolute mini-div"></div>
   </div>
   <div class="div-position absolute"></div>
+  <div class="div-position fixed"></div>
+  <div class="div-position static"></div>
+  <div class="div-position static"></div>
+  <div class="div-position static"></div>
 </body>
 </html>
