--- a/public/section-18/unidades-de-medida.html
+++ b/public/section-18/unidades-de-medida.html
@@ -11,9 +11,14 @@
     <div class="content">
         <div>
             <p>Medidas em pixel</p>
+            <div class="pixel-1"></div>
+            <div class="pixel-2"></div>
         </div>
-        <div>
+        <div class="porcentagem">
             <p>Medidas em %</p>
+            <div class="porcentagem-1">
+                <div class="porcentagem-2"></div>
+            </div>
         </div>
         <div>
             <p>Medidas em <em>em</em></p>
