Criando classe rem-1

--- a/public/section-18/unidades-de-medida.html
+++ b/public/section-18/unidades-de-medida.html
@@ -26,6 +26,7 @@
         </div>
         <div>
             <p>Medidas em rem</p>
+            <div class="rem-1"></div>
         </div>
     </div>
 </body>
