--- a/public/section-19/index.html
+++ b/public/section-19/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maxmum-scale=1, user-scalable=no">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/styles.css">
     <title>Contato</title>
 </head>
 <body>
-    <h1>teste</h1>
+    <div id="main-container">
+        <!-- Informações de endereço -->
+        <div id="address-container">
+            <div class="fade"></div>
+            <div id="address-content">
+                <h2><ion-icon name="navigate-outline"></ion-icon> Endereço</h2>
+                <p>Rua das Flores, 133</p>
+                <h2><ion-icon name="call-outline"></ion-icon> Telefone</h2>
+                <p>(48)99999-0000</p>
+                <h2><ion-icon name="mail-outline"></ion-icon> E-mail</h2>
+                <p>teste@hdc.com</p>
+            </div>
+        </div>
+        <!-- Informações para contato -->
+        <div id="form-container">
+            <form id="contact-form">
+                <label for="name">Nome:</label>
+                <input type="text" name="name" id="name" placeholder="Digite seu nome">
 
-    <ion-icon name="heart"></ion-icon>
+                <label for="email">E-mail:</label>
+                <input type="email" name="email" id="email" placeholder="Digite seu e-mail">
+
+                <label for="phone">Telefone:</label>
+                <input type="number" name="phone" id="phone" placeholder="Digite seu telefone">
+
+                <label for="msg">Mensagem:</label>
+                <textarea name="msg" id="msg" placeholder="Como podemos te ajudar?"></textarea>
+
+                <input type="submit" value="Enviar mensagem">
+            </form>
+        </div>
+    </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
